make sure text is visible with different background vars

--- a/src/scss/_components.breadcrumbs.scss
+++ b/src/scss/_components.breadcrumbs.scss
@@ -13,9 +13,10 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: $base-spacing-unit;
-    padding: $base-spacing-unit--tiny;
-    background-color: rgba(#fff, .5);
+    padding: $base-spacing-unit--tiny $base-spacing-unit--small;
+    background-color: rgba($white, .5);
     border-radius: $base-radius;
+    @include shadow-z1();
 
     @include md {
         margin-bottom: $base-spacing-unit--large;
@@ -38,11 +39,11 @@
 
     .sep {
         padding: 0 5px;
-        color: $grey-700;
+        color: $grey-200;
     }
 
     .trail-end {
         font-weight: 500;
-        color: $color-text-light;
+        color: $grey-400;
     }
 }
