--- a/src/scss/_components.meta.scss
+++ b/src/scss/_components.meta.scss
@@ -12,8 +12,4 @@
   color: currentColor;
   font-weight: inherit;
   }
-
-    &__item {
-      margin-right: 5px;
-    }
 }
