--- a/src/scss/_generic.reset.scss
+++ b/src/scss/_generic.reset.scss
@@ -25,4 +25,5 @@ h1, h2, h3, h4, h5, h6
   position:relative;
   //overflow:hidden;
   flex-shrink: 0;
+  word-wrap: break-word;
 }
