--- a/src/scss/_tools.functions.scss
+++ b/src/scss/_tools.functions.scss
@@ -32,3 +32,20 @@
 @function quadruple($inuit-number) {
     @return round($inuit-number * 4);
 }
+
+
+
+// Determines text color based on bg color
+//
+// .button {
+//   background: $sample-color;
+//   color: set-text-color($sample-color);
+// }
+//
+@function set-text-color($color) {
+  @if (lightness($color) > 51) {
+    @return rgba(#000000, .85); // Lighter backgorund, return dark color
+  } @else {
+    @return rgba(#ffffff, .85); // Darker background, return light color
+  }
+}
