--- a/src/scss/_trumps.helpers.scss
+++ b/src/scss/_trumps.helpers.scss
@@ -98,18 +98,20 @@
 
 .bg-white {
     background-color: $white;
-    color: $color-text;
+    color: set-text-color($white);
 }
 
 .bg-primary {
     background-color: $color-primary;
-    color: $white;
+    color: set-text-color($color-primary);
 }
 
 .bg-primary--dark {
     background-color: $color-primary-dark;
+    color: set-text-color($color-primary);
 }
 
 .bg-primary--light {
     background-color: $color-primary-light;
+    color: set-text-color($color-primary);
 }
